# openwire

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  agenttest.md  calude.md  claude2.md  entitlements.plist  feature.md  prompt.md  sonar-project.properties  spec.md  vercel.json
.agent/skills/: agent-code-review-swarm  p2p-casino-review.md
.agents/: .skill-lock.json
.claude/: settings.json
.claude-flow/: CAPABILITIES.md  config.yaml
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.claude-flow/tasks/: store.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  codecov.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
.hermes/: latest-hermes-request.md
.ruflo/hooks/: post-task.sh
.swarm/: hnsw.index  hnsw.metadata.json  memory.db  schema.sql
.tmp/: S01-RESEARCH-draft.md
Formula/: openwire.rb
debug/260317-1220-full-bug-hunt/: debug-results.tsv  eliminated.md  findings.md  summary.md
docs/: game-ui-architecture.md  murder-mystery-architecture.md  security-audit.md  socket-protocol.md  war-room-load-test-report.md
docs/ddd/: 01-identity-access.md  02-messaging-presence.md  03-casino-platform.md  04-roulette.md  05-blackjack.md  06-andar-bahar.md  07-slots.md  08-classic-games.md  09-administration.md  10-frontend-shell.md  README.md
openwire-relay/: package-lock.json  package.json  server.js  wrangler.toml
openwire-relay/src/: index.js
openwire-web/: .gitignore  AUDIT-REPORT.md  autoresearch-results.tsv  index.html  package-lock.json  package.json  playwright.config.js  replace_layout.js  vercel.json  vite.config.js
openwire-web/.claude-flow/data/: pending-insights.jsonl
openwire-web/.hermes/: gsd-runtime-note.md  latest-hermes-request.md
openwire-web/api/: gemini.js  haimaker.js  openrouter.js  qwen.js
openwire-web/coverage/: clover.xml  coverage-final.json  index.html
openwire-web/coverage/components/: AccountHistory.jsx.html  AdminPasswordGate.jsx.html  AdminPortal.jsx.html  BlackjackBoard.jsx.html  CosmeticsShop.jsx.html  DeadDropsPanel.jsx.html  GameBoard.jsx.html  GifPicker.jsx.html  HowToPlay.jsx.html  KarmaGuide.jsx.html  Landing.jsx.html  PostSessionSummary.jsx.html  SlotsBoard.jsx.html  TambolaBoard.jsx.html  VaultPanel.jsx.html  index.html
openwire-web/coverage/lib/: GameEngine.js.html  andarbahar.js.html  blackjack.js.html  bounties.js.html  casinoState.js.html  chaosAgent.js.html  cosmetics.js.html  deaddrops.js.html  game.js.html  gifSettings.js.html  index.html  jackpot.js.html  mystery.js.html  polymarket.js.html  profile.js.html  reputation.js.html  roulette.js.html  slots.js.html  socket.js.html  tambola.js.html  vault.js.html  wallet.js.html
openwire-web/coverage/styles/: blackjack.css.html  index.html  poke.css.html  slots.css.html
openwire-web/debug/260317-1131-full-scan/: debug-results.tsv  findings.md  fix-results.tsv  summary.md
openwire-web/debug/260317-1147-perf-scan/: debug-results.tsv  findings.md  summary.md
openwire-web/debug/260317-1200-full-scan-3/: debug-results.tsv  summary.md
openwire-web/debug/260317-1210-security-audit/: debug-results.tsv  summary.md
openwire-web/debug/260317-1340-autonomous-debug/: debug-results.tsv  findings.md  summary.md
openwire-web/src/: App.jsx  index.css
openwire-web/src/components/: AccountHistory.jsx  AdminPasswordGate.jsx  AdminPortal.jsx  AgentControlPanel.jsx  AndarBaharBoard.jsx  BlackjackBoard.jsx  ChatRoom.jsx  CluedoBoard.jsx  CosmeticsShop.jsx  DeadDropsPanel.jsx  GameBoard.jsx  GifPicker.jsx  HowToPlay.jsx  KarmaGuide.jsx  Landing.jsx  MonopolyBoard.jsx  MysteryBoard.jsx  PolymarketBoard.jsx  PostSessionSummary.jsx  RouletteBoard.jsx  ShashnBoard.jsx  SlotsBoard.jsx  TambolaBoard.jsx  VaultPanel.jsx
openwire-web/src/hooks/: useAndarBaharGame.js  useBlackjackGame.js  useCluedoGame.js  useMonopolyGame.js  useMysteryGame.js  usePolymarketGame.js  useRouletteGame.js  useShashnGame.js
openwire-web/src/lib/: GameEngine.js  andarbahar.js  blackjack.js  bounties.js  casinoState.js  chaosAgent.js  chatSessionState.js  cluedo.js  cosmetics.js  deaddrops.js  game.js  gifSettings.js  jackpot.js  monopoly.js  mystery.js  polymarket.js  profile.js  reputation.js  roulette.js  shashn.js  slots.js  socket.js  tambola.js  vault.js  wallet.js
openwire-web/src/styles/: admin.css  andarbahar.css  base.css  blackjack.css  chat.css  cluedo.css  games-shared.css  landing.css  monopoly.css  mystery.css  poke.css  polymarket.css  roulette.css  shashn.css  slots.css
openwire-web/src/tests/: admin-portal.test.js  ai-swarm.test.js  andarbahar.test.js  blackjack-timeout.test.js  bounties.test.js  casino-ui.test.js  chaos-agent.test.js  chat-identity.test.js  chat-room-status.test.jsx  chat-session-state.test.js  constraint-rooms.test.js  core-features.test.js  core.test.js  cosmetics-rendering.test.js  cosmetics.test.js  deaddrops-settings.test.js  deaddrops.test.js  e2e-integration.test.js  game-engines.test.js  gameLogic.test.js  identity.test.js  infrastructure.test.js  jackpot.test.js  vault.test.js  (+16 more)
openwire-web/test-results/: .last-run.json
scripts/: reformat-prompt-md.js  test-bridge.sh
skills/: agent-code-review-swarm
src/: crypto.rs  encryption.rs  game.rs  klipy.rs  main.rs  media.rs  relay_bridge.rs  room.rs
src/network/: mod.rs
src/ui/: game_ui.rs  mod.rs
src/web/: mod.rs
(+143 files in other folders)
